--- a/css/styles.css
+++ b/css/styles.css
@@ -547,7 +547,7 @@ address {
   margin-bottom: 16px;
 }
 .form-box {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 .form-box-label {
   color: #8e8f99;
@@ -562,6 +562,7 @@ address {
   position: relative;
 }
 .input-field {
+  align-items: center;
   width: 100%;
   height: 40px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -605,6 +606,9 @@ address {
 .comment-area:hover {
   border-color: #4d5ae5;
 }
+.comment-area:focus {
+  border-color: #4d5ae5;
+}
 .checkbox-box {
   margin-bottom: 24px;
   display: flex;
@@ -620,15 +624,20 @@ address {
   align-items: center;
   fill: transparent;
   margin-right: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.input-checkbox:checked .checking-box {
+.checkbox-box input:checked + .user-privacy-text .checking-box {
   background-color: #404bbf;
   border: none;
+}
+.checkbox-box input:checked + .user-privacy-text .checking-icon use {
   fill: #f4f4fd;
 }
 
 .user-privacy-text {
-  color: #2E2F42 40%;
+  color: #8e8f99;
   font-size: 12px;
   font-weight: 400;
   line-height: 1.17;
@@ -644,6 +653,7 @@ address {
   height: 56px;
   color: #fff;
   text-align: center;
+  margin: 0 auto;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -652,16 +662,10 @@ address {
   background-color: #4d5ae5;
   border: none;
   border-radius: 4px;
-  #4D5AE5);
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-send-modal:hover,
 .btn-send-modal:focus {
   background-color: #404bbf;
-}
-.btn-send-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
